_ r  replace most object typing with concrete class, introduce enums