@@ -6,6 +6,7 @@ import java.util.List;
 import com.chriscarr.bang.Hand;
 import com.chriscarr.bang.InPlay;
 import com.chriscarr.bang.Player;
+import com.chriscarr.bang.cards.Card;
 import com.chriscarr.bang.userinterface.UserInterface;
 
 public class TestUserInterfaceBangBackTwicePlayer1green2 extends TestUserInterface implements
@@ -30,7 +31,7 @@ public class TestUserInterfaceBangBackTwicePlayer1green2 extends TestUserInterfa
 
 	@Override
 	public int chooseGeneralStoreCard(Player generalPlayer,
-			List<Object> generalStoreCards) {
+			List<Card> generalStoreCards) {
 		// TODO Auto-generated method stub
 		return 0;
 	}
@@ -49,7 +50,7 @@ public class TestUserInterfaceBangBackTwicePlayer1green2 extends TestUserInterfa
 
 
 	@Override
-	public List<Object> chooseTwoDiscardForLife(Player sidKetchum) {
+	public List<Card> chooseTwoDiscardForLife(Player sidKetchum) {
 		// TODO Auto-generated method stub
 		return null;
 	}
@@ -67,7 +68,7 @@ public class TestUserInterfaceBangBackTwicePlayer1green2 extends TestUserInterfa
 	}
 
 	@Override
-	public boolean chooseDiscard(Player player, Object card) {
+	public boolean chooseDiscard(Player player, Card card) {
 		// TODO Auto-generated method stub
 		return false;
 	}
@@ -82,24 +83,24 @@ public class TestUserInterfaceBangBackTwicePlayer1green2 extends TestUserInterfa
 	}
 
 	@Override
-	public int chooseDrawCard(Player player, List<Object> cards) {
+	public int chooseDrawCard(Player player, List<Card> cards) {
 		// TODO Auto-generated method stub
 		return 0;
 	}
 
 	@Override
-	public int chooseCardToPutBack(Player player, List<Object> cards) {
+	public int chooseCardToPutBack(Player player, List<Card> cards) {
 		// TODO Auto-generated method stub
 		return 0;
 	}
 	
 	@Override
-	public List<Object> respondTwoMiss(Player player) {
-		List<Object> result = new ArrayList<>();
+	public List<Card> respondTwoMiss(Player player) {
+		List<Card> result = new ArrayList<>();
 		Hand hand = player.getHand();
                 InPlay inPlay = player.getInPlay();
-		result.add(inPlay.get(0));
-                result.add(hand.get(0));
+		result.add(inPlay.getFirst());
+		result.add(hand.getFirst());
 		return result;
 	}
 }
